# NyxPrism

./: .gitignore  README.md  pyproject.toml  railpack.json  requirements.txt  vercel.json
.github/workflows/: pages.yml
backend/: .env.example  package-lock.json  package.json  railway.toml
backend/src/: firebase.js  index.js
backend/src/db/: index.js  schema.sql
backend/src/middleware/: apiAuth.js  auth.js
backend/src/routes/: admin.js  ai-assist.js  ai-split.js  api-keys.js  contact.js  license.js  stripe.js  user.js
docs/: admin.html  contact.html  dashboard.html  index.html  login.html  manifest.json  privacy.html  robots.txt  sitemap.xml  sw.js  terms.html
nyxprism/: __init__.py
nyxprism/ai/: analyzer.py  namer.py  splitter.py  summarizer.py
nyxprism/cli/: main.py
nyxprism/core/: __init__.py  compress.py  extract.py  merge.py  ocr.py  pages.py  protect.py  split.py  watermark.py
nyxprism/tui/: __init__.py  app.py
tests/: conftest.py  test_ai.py  test_bulk_split.py  test_core.py  test_merge.py  test_split.py
