[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyxprism"
version = "1.0.0"
description = "Powerful AI-enhanced PDF multi-tool: split, merge, compress, convert, OCR, watermark, protect, and AI bulk-split with auto-rename"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NyxPrism Contributors" }]
keywords = ["pdf", "ai", "split", "merge", "ocr", "compress", "convert"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = [
    "pypdf>=4.0",
    "pdfplumber>=0.10",
    "Pillow>=10.0",
    "click>=8.0",
    "tqdm>=4.60",
    "openai>=1.0",
    "pytesseract>=0.3",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
nyxprism = "nyxprism.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["nyxprism*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
